--- a/Report Project1/DeletionOfApproval.rdl
+++ b/Report Project1/DeletionOfApproval.rdl
@@ -21,7 +21,8 @@
             <Value>=Parameters!ToDate.Value</Value>
           </QueryParameter>
         </QueryParameters>
-        <CommandText>select  ps.Deregistered as [Deletion of approval] , p.AspNumber AS[Asp no],
+        <CommandText>
+ select CONVERT(VARCHAR, cast(ps.Deregistered as date), 120) as [Deletion of approval] , p.AspNumber AS[Asp no],
           names.Name as [Product Name], ps.Land as[Country], df.Name as [Pharmacetical form] ,
          p.Strength,ma.Name as [MA Holder], TA.Name as [TherapeuticArea]
  
@@ -44,7 +45,7 @@
       <Fields>
         <Field Name="Deletion_of_approval">
           <DataField>Deletion of approval</DataField>
-          <rd:TypeName>System.DateTime</rd:TypeName>
+          <rd:TypeName>System.String</rd:TypeName>
         </Field>
         <Field Name="Asp_no">
           <DataField>Asp no</DataField>
@@ -925,7 +926,7 @@
             <Top>0.09667in</Top>
             <Left>2.24896cm</Left>
             <Height>0.43in</Height>
-            <Width>10.53126in</Width>
+            <Width>10.53125in</Width>
             <Style>
               <Border>
                 <Style>Solid</Style>
