--- a/Report Project1/ListOfRenewals.rdl
+++ b/Report Project1/ListOfRenewals.rdl
@@ -21,9 +21,9 @@
             <Value>=Parameters!ToDate.Value</Value>
           </QueryParameter>
         </QueryParameters>
-        <CommandText>select p.AspNumber AS[Asp no],  names.Name as [Product Name], ps.Land as [Country], df.Name as [Pharmacetical form], p.Strength, ps.MtNumber as [MaNo] , ps.ApprovalCease as [ApprovalExpires]
-    ,Responsible.Id as [ResponsibleId]    , Responsible.Name  as [Responsible]  , Responsible.Id        
- 
+        <CommandText>select p.AspNumber AS[Asp no],  names.Name as [Product Name], ps.Land as [Country], df.Name as [Pharmacetical form], p.Strength, 
+        ps.MtNumber as [MaNo] , CONVERT(VARCHAR, cast(ps.ApprovalCease as date), 120) as [ApprovalExpires]
+    ,Responsible.Id as [ResponsibleId]    , Responsible.Name  as [Responsible]  , Responsible.Id      
   from PREG4.dbo.Products p
    join [PREG4].[dbo].ProductSpecifications ps
     on  p.Id= ps.ProductId
@@ -70,7 +70,7 @@
         </Field>
         <Field Name="ApprovalExpires">
           <DataField>ApprovalExpires</DataField>
-          <rd:TypeName>System.DateTime</rd:TypeName>
+          <rd:TypeName>System.String</rd:TypeName>
         </Field>
         <Field Name="ResponsibleId">
           <DataField>ResponsibleId</DataField>
@@ -510,7 +510,7 @@
                                 </TextRun>
                               </TextRuns>
                               <Style>
-                                <TextAlign>Left</TextAlign>
+                                <TextAlign>Center</TextAlign>
                               </Style>
                             </Paragraph>
                           </Paragraphs>
@@ -943,7 +943,7 @@
                                 </TextRun>
                               </TextRuns>
                               <Style>
-                                <TextAlign>Left</TextAlign>
+                                <TextAlign>Center</TextAlign>
                               </Style>
                             </Paragraph>
                           </Paragraphs>
@@ -1083,7 +1083,7 @@
             <Top>0.09667in</Top>
             <Left>2.24896cm</Left>
             <Height>0.43in</Height>
-            <Width>10.79168in</Width>
+            <Width>10.79167in</Width>
             <Style />
           </Tablix>
         </ReportItems>
